--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -1,38 +1,10 @@
 #===================================== polybar =====================================
-#include-file = ~/myrepo/bspwm/polybar/settings.ini
+include-file = ~/.config/polybar/settings.ini
 include-file = ~/.config/polybar/modules.ini
-#include-file = ~/myrepo/bspwm/polybar/themes/tokyonight.ini
-
-
-[global/wm]
-;https://github.com/jaagr/polybar/wiki/Configuration#global-wm-settings
-margin-top = 0
-margin-bottom = 0
-
-[settings]
-;https://github.com/jaagr/polybar/wiki/Configuration#application-settings
-throttle-output = 5
-throttle-output-for = 10
-screenchange-reload = true
-compositing-background = over
-compositing-foreground = over
-compositing-overline = over
-compositing-underline = over
-compositing-border = over
-
-; Define fallback values used by all module formats
-format-foreground = #FF0000
-format-background = #00FF00
-format-underline =
-format-overline =
-format-spacing =
-format-padding =
-format-margin =
-format-offset =
 
 [colors]
-; that 85 after background meaning: opacity
-;background = #282a2e85
+# that 85 after background meaning: opacity
+#background = #282a2e85
 background = #282a2e
 foreground = #f2ae49
 foreground-active = #f0ece6
@@ -49,7 +21,7 @@ volume-max = #bf616a
 #===================================== mainbar-bspwm =====================================
 [bar/mainbar-bspwm]
 monitor = ${env:MONITOR}
-;monitor-fallback = HDMI1
+#monitor-fallback = HDMI1
 width = 96%
 height = 23
 offset-x = 2%
@@ -68,8 +40,8 @@ line-color = #f00
 wm-restack = bspwm
 override-redirect = true
 
-; Enable support for inter-process messaging
-; See the Messaging wiki page for more details.
+# Enable support for inter-process messaging
+# See the Messaging wiki page for more details.
 enable-ipc = true
 
 border-size = 0
