--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -65,7 +65,7 @@ font-3 = "JetBrainsMono:size=9;0"
 
 modules-left = bspwm xwindow
 modules-center =
-modules-right = kernel pavolume date
+modules-right = kernel pulseaudio date powermenu
 
 tray-detached = false
 tray-offset-x = 0
