--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -36,20 +36,25 @@ label-occupied-foreground = #f0f2f7
 
 label-urgent = %icon%
 label-urgent-padding = 2
-
 label-empty = %icon%
 label-empty-foreground = ${colors.foreground}
 label-empty-padding = 2
 label-empty-background = ${colors.background}
 label-monocle = "  "
 label-monocle-foreground = ${colors.foreground}
-label-tiled = "  "
+
+; 
+label-tiled = "  "
+
 label-tiled-foreground = ${colors.foreground}
 label-fullscreen = "  "
 label-fullscreen-foreground = ${colors.foreground}
 label-floating = "  "
 label-floating-foreground = ${colors.foreground}
-label-pseudotiled = "  "
+
+; 
+label-pseudotiled = "  "
+
 label-pseudotiled-foreground = ${colors.foreground}
 label-locked = "  "
 label-locked-foreground = ${colors.foreground}
@@ -68,8 +73,16 @@ format-background = ${colors.background}
 
 
 
-#===================================== updates =====================================
-# updates
+#===================================== powermenu =====================================
+[module/powermenu]
+type = custom/text
+content-background = ${colors.background}
+content-foreground = #FF0000
+content-padding = 1
+click-left = "$HOME/.config/rofi/powermenu/powermenu.sh"
+content = "⏻"
+
+; vim:ft=dosini
 
 
 
@@ -260,12 +273,12 @@ type = internal/date
 interval = 5
 ; See "http://en.cppreference.com/w/cpp/io/manip/put_time" for details on how to format the date string
 ; NOTE: if you want to use syntax tags here you need to use %%{...}
-;date = " %Y-%m-%d%"
+date = " %d-%m-%Y%"
 ;date-alt = " %d-%m-%Y"
 ;time = %H:%M
-time = %I:%Mp
-time-alt = %H:%M
-format-prefix = "  "
+time = "%I:%M %p"
+;time-alt = %H:%M
+;format-prefix = "  "
 format-prefix-foreground = #f2ae49
 ;format-underline = #5e81ac
 format-foreground = ${colors.foreground}
@@ -424,7 +437,7 @@ interval = 1024
 
 format-foreground = ${colors.foreground}
 format-background = ${colors.background}
-format-prefix = "  "
+;format-prefix = "  "
 format-prefix-foreground = #5e81ac
 ;format-underline = #5e81ac
 
@@ -619,6 +632,59 @@ scroll-down = ~/.config/polybar/scripts/pavolume.sh --down
 format-foreground = ${colors.foreground}
 format-background = ${colors.background}
 
+
+#===================================== volume/pulseaudio =====================================
+[module/pulseaudio]
+type = internal/pulseaudio
+
+format-volume = <ramp-volume><label-volume>
+format-volume-background = #282a2e
+;label-volume-padding-left = 1
+label-volume = %percentage%%
+
+label-volume-foreground = #FFBB00
+label-volume-background = #282a2e
+
+format-volume-overline = ${colors.background}
+format-muted-overline = ${colors.background}
+format-volume-underline = ${colors.background}
+format-muted-underline = ${colors.background}
+
+label-volume-overline = ${colors.background}
+label-muted-overline = ${colors.background}
+label-volume-underline = ${colors.background}
+label-muted-underline = ${colors.background}
+
+label-muted =  Muted
+label-muted-background = ${colors.background}
+label-muted-foreground = #FF0000
+;label-muted-padding = 1
+
+click-right = pavucontrol
+
+bar-volume-format = %{T8}%fill%%indicator%%empty%%{T-}
+bar-volume-width = 15
+
+bar-volume-gradient = false
+bar-volume-foreground-0 = ${colors.shade6}
+bar-volume-empty-foreground = ${colors.shade8}
+bar-volume-indicator-foreground = ${colors.shade6}
+; The fill, indicator and empty icon can be configured like any <label>
+bar-volume-fill = 
+bar-volume-empty = 
+bar-volume-indicator = 雷
+
+bar-volume-fill-background = ${colors.shade16}
+bar-volume-indicator-background = ${colors.shade16}
+bar-volume-empty-background = ${colors.shade16}
+
+; Only applies if <ramp-volume> is used
+ramp-volume-0 = 
+ramp-volume-1 = 
+ramp-volume-2 = 
+ramp-volume-foreground = ${colors.shade6}
+ramp-volume-background = ${colors.shade16}
+ramp-volume-padding-right = 1
 
 
 #===================================== pub-ip =====================================
