--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -86,6 +86,67 @@ content = "⏻"
 
 
 
+#===================================== network =====================================
+
+[module/eth]
+type = internal/network
+interface-type = wired
+interval = 3.0
+
+;format-connected-underline = ${xrdb:color2}
+format-connected-prefix = " "
+format-connected-background = ${colors.shade16}
+;format-connected-padding = 1
+format-connected-prefix-foreground = ${colors.shade5}
+label-connected = %{A1:setsid -f connman-gtk:}ETH%{A}
+
+label-connected-overline = ${colors.background}
+label-disconnected-overline = ${colors.background}
+label-connected-underline = ${colors.background}
+label-disconnected-underline = ${colors.background}
+
+format-connected-overline = ${colors.background}
+format-disconnected-overline = ${colors.background}
+format-connected-underline = ${colors.background}
+format-disconnected-underline = ${colors.background}
+
+format-disconnected =
+
+[module/wlan]
+type = internal/network
+interface-type = wireless
+interval = 3.0
+
+format-connected-background = ${colors.shade16}
+format-connected = <ramp-signal> <label-connected>
+;format-connected-padding-left = 1
+label-connected = %{A1:setsid -f connman-gtk:}%essid%%{A}
+label-connected-foreground = ${colors.shade5}
+
+label-connected-overline = ${colors.background}
+label-disconnected-overline = ${colors.background}
+label-connected-underline = ${colors.background}
+label-disconnected-underline = ${colors.background}
+
+format-connected-overline = ${colors.background}
+format-disconnected-overline = ${colors.background}
+format-connected-underline = ${colors.background}
+format-disconnected-underline = ${colors.background}
+
+format-disconnected = <label-disconnected>
+format-disconnected-background = ${colors.shade16}
+;format-disconnected-padding = 1
+label-disconnected =
+
+ramp-signal-0 = 
+ramp-signal-1 = 
+ramp-signal-2 = 
+ramp-signal-3 = 
+ramp-signal-4 = 
+ramp-signal-foreground = ${colors.shade5}
+
+
+
 #===================================== backlight-acpi =====================================
 [module/backlight-acpi]
 inherit = module/xbacklight
