--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -1,6 +1,11 @@
-#===================================== polybar =====================================
+#----------------------------------------- include-file -----------------------------------------
+
 include-file = ~/.config/polybar/settings.ini
 include-file = ~/.config/polybar/modules.ini
+
+
+
+#----------------------------------------- colors -----------------------------------------
 
 [colors]
 # that 85 after background meaning: opacity
@@ -17,11 +22,11 @@ volume-med = #ebcb8b
 volume-max = #bf616a
 
 
+#----------------------------------------- bar top -----------------------------------------
 
-#===================================== mainbar-bspwm =====================================
-[bar/mainbar-bspwm]
-monitor = ${env:MONITOR}
-#monitor-fallback = HDMI1
+[bar/top]
+monitor = eDP
+#monitor-fallback = eDP
 width = 96%
 height = 23
 offset-x = 2%
@@ -29,7 +34,7 @@ offset-y = 0.5%
 radius = 5.0
 fixed-center = true
 bottom = false
-separator = |
+separator = 󱋱
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -38,7 +43,7 @@ line-size = 2
 line-color = #f00
 
 wm-restack = bspwm
-override-redirect = true
+# override-redirect = true
 
 # Enable support for inter-process messaging
 # See the Messaging wiki page for more details.
@@ -58,10 +63,9 @@ module-margin-left = 1
 module-margin-right = 1
 
 ;https://github.com/jaagr/polybar/wiki/Fonts
-font-0 = "JetBrainsMono:size=9;0"
-font-1 = "JetBrainsMono:size=9;0"
-font-2 = "JetBrainsMono:size=9;0"
-font-3 = "JetBrainsMono:size=9;0"
+font-0 = "JetBrainsMono Nerd Font:size=9;0"
+#font-0 = "JetBrainsMono:size=9;0"
+
 
 modules-left = bspwm xwindow
 modules-center =
@@ -83,18 +87,19 @@ cursor-scroll = ns-resize
 
 
 
-#===================================== bar external =====================================
-[bar/mainbar-bspwm-extra]
-monitor = ${env:MONITOR}
-;monitor-fallback = HDMI1
-width = 100%
-height = 30
-;offset-x = 1%
-;offset-y = 1%
-radius = 0.0
+#----------------------------------------- bar top external -----------------------------------------
+
+[bar/top_external]
+monitor = HDMI-A-0
+;monitor-fallback = HDMI-A-0
+width = 96%
+height = 23
+offset-x = 2%
+offset-y = 0.5%
+radius = 5.0
 fixed-center = true
-bottom = true
-separator = |
+bottom = false
+separator = 󱋱
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -103,10 +108,10 @@ line-size = 2
 line-color = #f00
 
 wm-restack = bspwm
-override-redirect = true
+# override-redirect = true
 
-; Enable support for inter-process messaging
-; See the Messaging wiki page for more details.
+# Enable support for inter-process messaging
+# See the Messaging wiki page for more details.
 enable-ipc = true
 
 border-size = 0
@@ -119,30 +124,33 @@ border-color = #00000000
 padding-left = 0
 padding-right = 1
 
-module-margin-left = 3
-module-margin-right = 3
+module-margin-left = 1
+module-margin-right = 1
 
 ;https://github.com/jaagr/polybar/wiki/Fonts
-font-0 = "Noto Sans:size=10;0"
-font-1 = "FontAwesome:size=13;0"
-font-2 = "Noto Sans:size=10;0"
-font-3 = "Noto Sans Mono:size=10;0"
+font-0 = "JetBrainsMono Nerd Font:size=9;0"
+#font-0 = "JetBrainsMono:size=9;0"
+;font-1 = "JetBrainsMono:size=9;0"
 
-modules-left = load-average
+
+modules-left = bspwm xwindow
 modules-center =
-modules-right = kernel date pavolume
+modules-right = kernel pulseaudio date powermenu
 
-;tray-detached = false
-;tray-offset-x = 0
-;tray-offset-y = 0
-;tray-padding = 2
-;tray-maxsize = 20
-;tray-scale = 1.0
-;tray-position = right
-;tray-background = ${colors.background}
+tray-detached = false
+tray-offset-x = 0
+tray-offset-y = 0
+tray-padding = 2
+tray-maxsize = 20
+tray-scale = 1.0
+tray-position = right
+tray-background = ${colors.background}
 
 scroll-up = bspwm-desknext
 scroll-down = bspwm-deskprev
+cursor-click = pointer
+cursor-scroll = ns-resize
 
-#========================================================================================
-#========================================================================================
+
+
+#----------------------------------------- eof -----------------------------------------
