--- a/.config/polybar/settings.ini
+++ b/.config/polybar/settings.ini
@@ -1,6 +1,4 @@
-[global/wm]
-margin-top = 0
-margin-bottom = 0
+#----------------------------------------- settings -----------------------------------------
 
 [settings]
 throttle-output = 5
@@ -22,3 +20,5 @@ format-spacing =
 format-padding =
 format-margin =
 format-offset =
+
+#----------------------------------------- eof -----------------------------------------
