--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -27,10 +27,10 @@ volume-max = #bf616a
 [bar/top]
 monitor = eDP
 #monitor-fallback = eDP
-width = 96%
+width = 90%
 height = 23
-offset-x = 2%
-offset-y = 0.5%
+offset-x = 5%
+offset-y = 1%
 radius = 5.0
 fixed-center = true
 bottom = false
@@ -56,8 +56,8 @@ border-size = 0
 ;border-bottom-size = 25
 border-color = #00000000
 
-padding-left = 0
-padding-right = 1
+padding-left = 2
+padding-right = 2
 
 module-margin-left = 1
 module-margin-right = 1
@@ -92,10 +92,10 @@ cursor-scroll = ns-resize
 [bar/top_external]
 monitor = HDMI-A-0
 ;monitor-fallback = HDMI-A-0
-width = 96%
+width = 90%
 height = 23
-offset-x = 2%
-offset-y = 0.5%
+offset-x = 5%
+offset-y = 1%
 radius = 5.0
 fixed-center = true
 bottom = false
@@ -121,8 +121,8 @@ border-size = 0
 ;border-bottom-size = 25
 border-color = #00000000
 
-padding-left = 0
-padding-right = 1
+padding-left = 2
+padding-right = 2
 
 module-margin-left = 1
 module-margin-right = 1
@@ -143,7 +143,7 @@ tray-offset-y = 0
 tray-padding = 2
 tray-maxsize = 20
 tray-scale = 1.0
-tray-position = right
+tray-position = none
 tray-background = ${colors.background}
 
 scroll-up = bspwm-desknext
