--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -696,15 +696,15 @@ format-underline = #C15D3E
 
 [module/variety]
 type = custom/script
-exec = echo " Variety"
-;exec = echo " "
+;exec = echo " Variety"
+exec = echo " "
 interval = 1
 tail = true
 format-foreground = ${colors.foreground}
 format-background = ${colors.background}
 format-prefix = ""
 format-prefix-foreground = #FFFFF
-format-underline = #0084FF
+;format-underline = #0084FF
 click-right = variety --preferences
 click-left = variety --selector
 
