--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -67,9 +67,9 @@ font-0 = "JetBrainsMono Nerd Font:size=9;0"
 #font-0 = "JetBrainsMono:size=9;0"
 
 
-modules-left = bspwm xwindow
-modules-center =
-modules-right = kernel pulseaudio date powermenu
+modules-left = bspwm
+modules-center = xwindow
+modules-right = kernel date pulseaudio variety powermenu
 
 tray-detached = false
 tray-offset-x = 0
@@ -133,9 +133,9 @@ font-0 = "JetBrainsMono Nerd Font:size=9;0"
 ;font-1 = "JetBrainsMono:size=9;0"
 
 
-modules-left = bspwm xwindow
-modules-center =
-modules-right = kernel pulseaudio date powermenu
+modules-left = bspwm
+modules-center = xwindow
+modules-right = kernel date pulseaudio variety powermenu
 
 tray-detached = false
 tray-offset-x = 0
