--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -69,7 +69,7 @@ font-0 = "JetBrainsMono Nerd Font:size=9;0"
 
 modules-left = bspwm
 modules-center = xwindow
-modules-right = kernel date pulseaudio variety powermenu
+modules-right = kernel time date pulseaudio variety powermenu
 
 tray-detached = false
 tray-offset-x = 0
@@ -135,7 +135,7 @@ font-0 = "JetBrainsMono Nerd Font:size=9;0"
 
 modules-left = bspwm
 modules-center = xwindow
-modules-right = kernel date pulseaudio variety powermenu
+modules-right = kernel time date pulseaudio variety powermenu
 
 tray-detached = false
 tray-offset-x = 0
