--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -84,7 +84,7 @@ content-background = ${colors.background}
 content-foreground = #ffb52a
 content-padding = 1
 click-left = "$HOME/.config/rofi/powermenu/powermenu.sh"
-content = "󰐦"
+content = ""
 ; vim:ft=dosini
 
 
@@ -98,11 +98,28 @@ type = internal/date
 interval = 5
 ; See "http://en.cppreference.com/w/cpp/io/manip/put_time" for details on how to format the date string
 ; NOTE: if you want to use syntax tags here you need to use %%{...}
-date = " %d-%m-%Y%"
+date = "%a %B %e, %Y"
 ;date-alt = " %d-%m-%Y"
-;time = %H:%M
-time = "%I:%M %p"
-;time-alt = %H:%M
+format-prefix = "  "
+format-prefix-foreground = #f2ae49
+;format-underline = #5e81ac
+format-foreground = ${colors.foreground}
+format-background = ${colors.background}
+label = %time% %date%
+
+
+
+#----------------------------------------- time -----------------------------------------
+
+[module/time]
+;https://github.com/jaagr/polybar/wiki/Module:-date
+type = internal/date
+; Seconds to sleep between updates
+interval = 5
+; See "http://en.cppreference.com/w/cpp/io/manip/put_time" for details on how to format the date string
+; NOTE: if you want to use syntax tags here you need to use %%{...}
+time = %H:%M
+;time-alt = "%I:%M %p"
 format-prefix = " 󱑓 "
 format-prefix-foreground = #f2ae49
 ;format-underline = #5e81ac
