--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -11,11 +11,11 @@ include-file = ~/.config/polybar/modules.ini
 # that 85 after background meaning: opacity
 #background = #282a2e85
 background = #282a2e
-foreground = #f2ae49
+foreground = #2e76a3
 foreground-active = #f0ece6
 occupied = #cccccc
-occupied-active = #f2ae49
-active = #f2ae49
+occupied-active = #2e76a3
+active = #2e76a3
 alert = #d08770
 volume-min = #a3be8c
 volume-med = #ebcb8b
