--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -81,7 +81,7 @@ format-background = ${colors.background}
 [module/powermenu]
 type = custom/text
 content-background = ${colors.background}
-content-foreground = #ffb52a
+content-foreground = #2e76a3
 content-padding = 1
 click-left = "$HOME/.config/rofi/powermenu/powermenu.sh"
 content = ""
@@ -101,7 +101,7 @@ interval = 5
 date = "%a %B %e, %Y"
 ;date-alt = " %d-%m-%Y"
 format-prefix = "  "
-format-prefix-foreground = #f2ae49
+format-prefix-foreground = #2e76a3
 ;format-underline = #5e81ac
 format-foreground = ${colors.foreground}
 format-background = ${colors.background}
@@ -121,7 +121,7 @@ interval = 5
 time = %H:%M
 ;time-alt = "%I:%M %p"
 format-prefix = " 󱑓 "
-format-prefix-foreground = #f2ae49
+format-prefix-foreground = #2e76a3
 ;format-underline = #5e81ac
 format-foreground = ${colors.foreground}
 format-background = ${colors.background}
@@ -140,7 +140,7 @@ interval = 1024
 format-foreground = ${colors.foreground}
 format-background = ${colors.background}
 format-prefix = "  "
-format-prefix-foreground = #f2ae49
+format-prefix-foreground = #2e76a3
 ;format-underline = #5e81ac
 
 
@@ -155,7 +155,7 @@ format-volume-background = #282a2e
 ;label-volume-padding-left = 1
 label-volume = %percentage%%
 
-label-volume-foreground = #FFBB00
+label-volume-foreground = #2e76a3
 label-volume-background = #282a2e
 
 format-volume-overline = ${colors.background}
@@ -196,7 +196,7 @@ bar-volume-empty-background = ${colors.shade16}
 ramp-volume-0 =  󰕿
 ramp-volume-1 =  
 ramp-volume-2 =  
-ramp-volume-foreground = #f2ae49
+ramp-volume-foreground = #2e76a3
 ramp-volume-background = ${colors.background}
 ramp-volume-padding-right = 1
 
