--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -98,7 +98,8 @@ type = internal/date
 interval = 5
 ; See "http://en.cppreference.com/w/cpp/io/manip/put_time" for details on how to format the date string
 ; NOTE: if you want to use syntax tags here you need to use %%{...}
-date = "%a %B %e, %Y"
+date = "%a, %B %e"
+;date = "%a, %B %e, %Y"
 ;date-alt = " %d-%m-%Y"
 format-prefix = "  "
 format-prefix-foreground = #2e76a3
