--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -63,8 +63,9 @@ module-margin-left = 1
 module-margin-right = 1
 
 ;https://github.com/jaagr/polybar/wiki/Fonts
-font-0 = "JetBrainsMono Nerd Font:size=9;0"
-#font-0 = "JetBrainsMono:size=9;0"
+font-0 = "JetBrainsMono Nerd Font:size=11;2"
+font-1 = "JetBrainsMono Nerd Font:style=Regular:size=10;2"
+font-2 = "JetBrainsMono Nerd Font:style=Bold:size=10;2"
 
 
 modules-left = bspwm
@@ -128,9 +129,9 @@ module-margin-left = 1
 module-margin-right = 1
 
 ;https://github.com/jaagr/polybar/wiki/Fonts
-font-0 = "JetBrainsMono Nerd Font:size=9;0"
-#font-0 = "JetBrainsMono:size=9;0"
-;font-1 = "JetBrainsMono:size=9;0"
+font-0 = "JetBrainsMono Nerd Font:size=11;2"
+font-1 = "JetBrainsMono Nerd Font:style=Regular:size=10;2"
+font-2 = "JetBrainsMono Nerd Font:style=Bold:size=10;2"
 
 
 modules-left = bspwm
