--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -1,16 +1,12 @@
-#----------------------------------------- include-file -----------------------------------------
-
 include-file = ~/.config/polybar/settings.ini
 include-file = ~/.config/polybar/modules.ini
 
-
-
-#----------------------------------------- colors -----------------------------------------
-
 [colors]
 # that 85 after background meaning: opacity
+#foreground = #e0d8d7
 #background = #282a2e85
 background = #282a2e
+#background = #0a0a0a
 foreground = #2e76a3
 foreground-active = #f0ece6
 occupied = #cccccc
@@ -22,7 +18,6 @@ volume-med = #ebcb8b
 volume-max = #bf616a
 
 
-#----------------------------------------- bar top -----------------------------------------
 
 [bar/top]
 monitor = eDP
@@ -34,7 +29,7 @@ offset-y = 1%
 radius = 5.0
 fixed-center = true
 bottom = false
-separator = 󱋱
+separator = |
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -68,9 +63,12 @@ font-1 = "JetBrainsMono Nerd Font:style=Regular:size=10;2"
 font-2 = "JetBrainsMono Nerd Font:style=Bold:size=10;2"
 
 
+
 modules-left = bspwm
 modules-center = xwindow
-modules-right = kernel time date pulseaudio variety powermenu
+modules-right = kernel time date pulseaudio battery powermenu
+
+
 
 tray-detached = false
 tray-offset-x = 0
@@ -88,8 +86,6 @@ cursor-scroll = ns-resize
 
 
 
-#----------------------------------------- bar top external -----------------------------------------
-
 [bar/top_external]
 monitor = HDMI-A-0
 ;monitor-fallback = HDMI-A-0
@@ -100,7 +96,7 @@ offset-y = 1%
 radius = 5.0
 fixed-center = true
 bottom = false
-separator = 󱋱
+separator = |
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -134,9 +130,10 @@ font-1 = "JetBrainsMono Nerd Font:style=Regular:size=10;2"
 font-2 = "JetBrainsMono Nerd Font:style=Bold:size=10;2"
 
 
+
 modules-left = bspwm
 modules-center = xwindow
-modules-right = kernel time date pulseaudio variety powermenu
+modules-right = kernel time date pulseaudio battery powermenu
 
 tray-detached = false
 tray-offset-x = 0
@@ -151,7 +148,3 @@ scroll-up = bspwm-desknext
 scroll-down = bspwm-deskprev
 cursor-click = pointer
 cursor-scroll = ns-resize
-
-
-
-#----------------------------------------- eof -----------------------------------------
