--- a/.config/polybar/settings.ini
+++ b/.config/polybar/settings.ini
@@ -1,5 +1,3 @@
-#----------------------------------------- settings -----------------------------------------
-
 [settings]
 throttle-output = 5
 throttle-output-for = 10
@@ -12,13 +10,11 @@ compositing-border = over
 pseudo-transparency = true
 
 ; Define fallback values used by all module formats
-format-foreground = #FF0000
-format-background = #00FF00
+; format-foreground = #FF0000
+; format-background = #00FF00
 format-underline =
 format-overline =
 format-spacing =
 format-padding =
 format-margin =
 format-offset =
-
-#----------------------------------------- eof -----------------------------------------
