--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,5 +1,5 @@
 # vim:fileencoding=utf-8:ft=conf
-editor lvim
+editor nvim
 
 font_family        JetBrainsMono Nerd Font Mono
 italic_font        auto
@@ -8,16 +8,16 @@ bold_italic_font   auto
 font_size          12.0
 
 #dynamic_background_opacity yes
-background_opacity 0.8
+background_opacity 0.85
 
 # The cursor shape can be one of (block, beam, underline)
 cursor_shape block
 
 # kitty shell integration
-# shell_integration enabled no-cursor
-# shell_integration disabled
+shell_integration enabled no-cursor
+#shell_integration disabled
 # cursor_beam_thickness 1.5
-cursor_underline_thickness 1.5
+#cursor_underline_thickness 1.5
 
 # The interval (in seconds) at which to blink the cursor. Set to zero to
 # disable blinking.
