--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -22,11 +22,11 @@ volume-max = #bf616a
 [bar/top]
 monitor = eDP
 #monitor-fallback = eDP
-width = 90%
-height = 23
-offset-x = 5%
-offset-y = 1%
-radius = 5.0
+width = 100%
+height = 27
+; offset-x = 5%
+; offset-y = 1%
+radius = 0.0
 fixed-center = true
 bottom = false
 separator = |
@@ -89,11 +89,11 @@ cursor-scroll = ns-resize
 [bar/top_external]
 monitor = HDMI-A-0
 ;monitor-fallback = HDMI-A-0
-width = 90%
-height = 23
-offset-x = 5%
-offset-y = 1%
-radius = 5.0
+width = 100%
+height = 27
+; offset-x = 5%
+; offset-y = 1%
+radius = 0.0
 fixed-center = true
 bottom = false
 separator = |
