--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -888,7 +888,7 @@ format-underline = #62FF00
 [module/sep]
 ; alternative separator
 type = custom/text
-format = 󰣇
+format = 
 format-foreground = ${colors.foreground}
 format-background = ${colors.background}
 
